[package]
name = "spfunc"
version = "0.1.3"
authors = ["doraneko94 <shuntaro94@gmail.com>"]
edition = "2021"

description = "Rust crate for numerical calculation of special functions."
documentation = "https://docs.rs/spfunc/"
repository = "https://github.com/doraneko94/spfunc"
keywords = ["mathematics", "numerical", "science"]
license = "MIT"
readme = "README.md"
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
num-complex = "0.4.6"
num-traits = "0.2.19"
cauchy = "0.4.0"

[dev-dependencies]
criterion = "0.6.0"
rand = "0.9.1"
rand_distr = "0.5.1"
plotters = "0.3.7"
